feat: Починила запрос: Получить список пользователей в текущей группе